@@ -13,11 +13,12 @@ AUX urbackup-server-2.1.7-autoupdate-ui.patch 116241 SHA256 488a679bcec6bb4ab885
 AUX urbackup-server-2.1.7-gcc-fortify.patch 777 SHA256 044c63f34d07b169c4c17e273f73d477db6d007767261a2818b217c75f13db6c SHA512 9916ff126ecd872e00bdaee1e095e14bd0e85ddbbe2f40eff5fa587495d28fc8faf51193e78561cd06eb0cfab6fd0dfcdb83531e331ff7ddb052038bad01f834 WHIRLPOOL 5b95187b8d77778a252add33746da8addf9820438120b95a9528c7edefb9f90b3a7164a55152baaed72b7eb89d41b291871f99e879accb2612eeae32c33f2658
 AUX urbackup-server-2.1.7-gentoo-prefix.patch 611 SHA256 873975161ff59288c510220a39d84c64768f539ac3986fad777d0fd28a72f330 SHA512 27375d8fe01c8193b0de454ba58a0ddbe1d232d01031dbb30f30ad4cdbd45add64ba924d9e71d85602f4b0878b199856d896fa0e9f6d209bb84b232893796364 WHIRLPOOL 5346557896933507dc4f70694ae4b98ccf0952173e8810cd4ce4edb60fd9b23433282101980adba8330e0d03a91ae82bb47684589a58cf8985b9f8d631844c3d
 AUX urbackup-server-2.1.7-manpage.patch 1282 SHA256 4f431c82151c9b5c61c7c9f0342730844766e67e70e586c53db812aba8548e1d SHA512 53fe444f70e1e0b671d2b202cd3cf6d2597f1e38296bd1ace969803118511ef5b8462c934b0dc4ae9cbe231d1793fb087fbe4c7dd9760799bf9444b318838cba WHIRLPOOL feb8d8507c6a35d0bc36823766e4d45bc702658224bc4e87fe1f64928824556e39917164b08cd30f94ba7b1e67195c7509303a8683427114a1bd1e64923092b0
+AUX urbackup-server.service 243 SHA256 08f72a0d07c805b6b88611e5037923ea209b667e020c1861cce5e77ca3cc5216 SHA512 c511f403addf426bc30782e180fbf1e346d98c84aa5f2573eb3853f1c15451fe2278b9566aefc5c54caa97e1b2e76a28d794594c921fbd568d66699e2a61dc64 WHIRLPOOL bb17606b34e707d1ee494bb06110bc4bb390016009c232165e6ac89d032f22c6d70a534bdeb56cd85ed83f6cea5312609d0dd590e4bc1640da2b9702ea8a8975
 AUX urbackupsrv 270 SHA256 28f3cb16d26b3a15b92a3877a201b0e88ba4ed82f79eb4c389d0728f43291ad0 SHA512 407840c60e5ed7f1414e42805a1468bae215e82951faa7272cf6f379792ee5316a309975bb424615b7381a2ef19729f49ff340035a2b468021d1743e52b35d7f WHIRLPOOL 354a125e4a20320f89504e341ea7cc3abadaa5b1374e43145277cb0cac073b87a30f078b25e5e217482b1dbaa4b68cd0e0b4b435b7fccc96876340a250193d60
 DIST urbackup-server-2.0.38.tar.gz 4263888 SHA256 2d63077c3bb3bb38dfdd4935a0e053ec9540246a4e44ff193663d9339fd11ae3 SHA512 886d0e01b5af46ce773c0b4991d2efd739f2b5f4c4993f6b959ef06eda26a718638e86ef3a8bd9a5202585b93e6481b7dd69cd11c07863aa868aebfafce7bf59 WHIRLPOOL d0bf352968f5e127550384c4e3a939ed26924dbb3190f1429a193777784c707bedaedb29be935740f92a1681d500ab75d017f690ad406730efe64454dcbb57b7
 DIST urbackup-server-2.1.7.tar.gz 4440792 SHA256 187c430d21a906fe6e3e679c58545fdff93042e439665a034b94344065735a30 SHA512 1d6fb563b6ab7a70884df40fb41759c6d02ad605b4feb0c9f64400f0d1a2f5055f159b4bba2fe00bb4a68c67e4ed87cda44124387da2ac556470fcd042f8a003 WHIRLPOOL dc4e92901711bc6a1eec334304a196ebbb13c71ab038a3376bc73b5d1fc126af888f18cf24fa625f023e560db7681aac62117dc7f49abd5529f7f794f0f3a113
-EBUILD urbackup-server-2.0.38.ebuild 1509 SHA256 2d9519d0b664198106e2b31081bbf0f73c82e573d174e5a4427cbfcfc13e41e4 SHA512 dffea22dda50ddf051276958c5bf831a450a5fbc543b2c1d17de8f3344ffa02bf8d8ca228c60f5eff8ff4b6c8b86da7023cf5ea0b4e41fb59c73a188788ec074 WHIRLPOOL 8a3940facf4251ae22c3438a04ffb8b9fde7af38e6179b2cd910645c2dcc043a9a7835eddf9251593f6212a58b072a6d3ec7173f39955658bc830217fffcfe27
-EBUILD urbackup-server-2.1.7.ebuild 1514 SHA256 30c92af71060c7d8fa75e9c1ed8a7cdbfd80b72c12aa4ee10eda07c8ca138454 SHA512 0c4ee8a790637988ac08ee89d6f9d2cc372c16545d29b44888608b3750e87d4f23310fb34ce5c323a7d6d9516032afbf583faaca47784515d6d211d2b9720405 WHIRLPOOL 6bcd7612357d8d05599e8d7fd772114be272fbe4982f558bfb6366970fbbfa63b9dbc11bb822ad46fd15ff77845af47b660b00f3cef762418bce4095b8475fc2
+EBUILD urbackup-server-2.0.38.ebuild 1569 SHA256 5dad4dc5c2dc42a546035e0ac69b566baea9f88b3dff9caa2ddee9a14f9f6a38 SHA512 32b632445bae5a6bbd94fd2743a93ec223247efe12a5547d139e504f5363f38ff8a2a851bcd857d5e7aaf3be9fde4227fe7f107511dbdde64c878fe9204a1ef3 WHIRLPOOL 7f781c791b297752d5d42f4757ee812545370e5f1a314d2dd55db820e2ba36af47fafb5280a2063643018ab84120915043fa77368480060c3cd9f4351fc930ba
+EBUILD urbackup-server-2.1.7.ebuild 1568 SHA256 21aae839526f6e2067ecdb48cc433f45f8c833fbe4a98fff2776dc05bf2cdcaa SHA512 af16ec05f940c66fafee07482af6526251a67b6abb30ae563b8be1ba875195ce5f62fa3c2d3242148e5faf82ddc9c7c2bcca007c363ced9faabbc91314d1294c WHIRLPOOL ac991b11b164d225f68308dd4c7eec17b7fc4600348975bb09035bde4ec8351ca6d5bf914ccbc8d98db2a75525965fac9de02ab15d66500bfe212284dd7633d5
 MISC ChangeLog 2468 SHA256 0b66893a66be06453c84dc0e8ee685a52002275339418d60491d7abd966b19f3 SHA512 07973ce161ed9f394fd4587542a8dacd49da928b688764887bf4c6083433c0b604472201d8547f84ecae85f6cba0773aea52661aa6c6f80148bf727141a27e58 WHIRLPOOL 14a0caf12037f7473990b15d1533663f2d275f3e8bedd9cfe374c166181efa35448d1452e7ef48be6b1bcb8b53f4a883662670d5e192a1b40808ff94a7dcf715
 MISC LICENSE 34520 SHA256 76a97c878c9c7a8321bb395c2b44d3fe2f8d81314d219b20138ed0e2dddd5182 SHA512 3a02a6ec14e9d076b79aea8301eab31053c6600b68dcfa6261e10edaa7296a87c8767e35f2411d234b90111fcaf6b4a55c49aa2790a1a0d015213218bb7549fc WHIRLPOOL cdba1c22f8229b169b91c1c72c8c162a7f59c5bb844b6df22e95a1c266c0855741227649012f5201e93ce1b0102d441700a701bae51b29d422a912f2aa17a7aa
 MISC README.md 526 SHA256 c4015dadcd3c066697b2ec9b6a673a1614cbfabe45bbc18463d361756b03f5f5 SHA512 74d29265c740b6f07fdce55ae1d3f0e6ba93e2d22dcf93bdc0f7a64568b17062da220e8a150d2b4df2d7dc8990f5e3859f58825673856d651f9a0bdaf0129dba WHIRLPOOL 8db5806a1db13bf940c65f8cb4f6b5b7cb2817ff91485c73722bc83c0a26bf80108c77ddf6e973594830ebb7b5b23e89927337c5a194fca12a8de4b1298a42ea
