@@ -3,7 +3,7 @@
 # $Header: $
 
 EAPI=6
-inherit user
+inherit user systemd
 
 DESCRIPTION="Fast and easily configured backup server"
 HOMEPAGE="https://www.urbackup.org"
@@ -13,7 +13,7 @@ S=${WORKDIR}/${P}.0
 SLOT="0"
 LICENSE="AGPL-3"
 KEYWORDS="~amd64 ~x86"
-IUSE="crypt gcc-fortify fuse mail zlib"
+IUSE="crypt hardened fuse mail zlib"
 
 RDEPEND="
 	crypt? ( >=dev-libs/crypto++-5.1 )
@@ -41,7 +41,7 @@ pkg_setup() {
 src_configure() {
 	econf \
 	$(use_with crypt crypto) \
-	$(use_enable gcc-fortify fortify) \
+	$(use_enable hardened fortify) \
 	$(use_with fuse mountvhd) \
 	$(use_with mail) \
 	$(use_with zlib) \
@@ -55,6 +55,7 @@ src_install() {
 	newins logrotate_urbackupsrv urbackupsrv
 	newconfd defaults_server urbackupsrv
 	doinitd "${FILESDIR}"/urbackupsrv
+	systemd_dounit ${FILESDIR}/urbackup-server.service
 	fowners -R urbackup:urbackup "${EPREFIX}/var/lib/urbackup"
 	fowners -R urbackup:urbackup "${EPREFIX}/usr/share/urbackup/www"
 }
